[tool.poetry]
name = "harmonization"
version = "0.1.0"
description = ""
authors = ["Paul Martin Panez Caballero <ppanezuni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.113.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
